--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,15 @@ language: generic
 
 script: /bin/true
 
-deploy:
-- provider: script
-  skip_cleanup: true
-  script: echo "Should fail"; false; DEPLOY1_STATUS=$?
-- provider: script
-  skip_cleanup: true
-  script: echo "Should pass"; true; DEPLOY2_STATUS=$?
-
-after_deploy:
-  - if [[ $DEPLOY1_STATUS -eq 0 && $DEPLOY2_STATUS -eq 0 ]]; then echo "passed"; else echo "one of the deploys failed"; travis_terminate 1; fi
+jobs:
+  include:
+    - script: echo "Deploy 1"
+      deploy:
+      - provider: script
+        skip_cleanup: true
+        script: echo "Should fail"; false; DEPLOY1_STATUS=$?
+    - script: echo "Deploy 2"
+      deploy:
+      - provider: script
+        skip_cleanup: true
+        script: echo "Should pass"; true; DEPLOY2_STATUS=$?
