--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ jobs:
       deploy:
       - provider: script
         skip_cleanup: true
-        script: echo "Should fail"; false; DEPLOY1_STATUS=$?
+        script: echo "Should fail"; false
     - script: echo "Deploy 2"
       deploy:
       - provider: script
         skip_cleanup: true
-        script: echo "Should pass"; true; DEPLOY2_STATUS=$?
+        script: echo "Should pass"; true
